--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,20 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "nodejsapp.fullname" . }}
+  name: nginx
   labels:
-{{ include "nodejsapp.labels" . | indent 4 }}
+    app: nginx
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "nodejsapp.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      app: nginx
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "nodejsapp.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
+        app: nginx
     spec:
       containers:
         - name: {{ .Chart.Name }}
