--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "nodejsapp.fullname" . }}
+  name: nginxsvc
   labels:
-{{ include "nodejsapp.labels" . | indent 4 }}
+    app: nginx
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,5 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: {{ include "nodejsapp.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app: nginx
